--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,10 @@
 body
 {
     text-align: left;
-    font-family: "Arial";
+    font-family: "Courier";
     color: #333;
+    margin: 0;
+    padding: 0;
 }
 
 #container {
