--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body
 {
     text-align: left;
-    font-family: "Courier";
+    font-family: "Arial";
     color: #333;
     margin: 0;
     padding: 0;
