--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body
 {
+    background: #1e1f24;
     text-align: left;
     font-family: "Arial";
     color: #333;
@@ -22,8 +23,14 @@ body
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em;
 
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline
@@ -37,3 +44,8 @@ body
     font-size: 20px;
 }
 
+#post
+{
+    background: white;
+    padding: 1em;
+}
